Added full datasets for the AI

--- a/artificial_intelligence/covid19_prognosis_prediction_service/templates/index_extended.html
+++ b/artificial_intelligence/covid19_prognosis_prediction_service/templates/index_extended.html
@@ -98,7 +98,7 @@
                   </select>
               </div>
               <div class="form-group">
-                <label for="gender">Are You Male?</label>
+                <label for="gender">Are You Female?</label>
                   <select id="gender" name = "gender" class="form-control" required>
                     <option >Select...</option>
                     <option value="1">Yes</option>
